# Sourcerer

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md  THIRD-PARTY-NOTICES.md  deny.toml
.github/workflows/: ci.yml  release.yml
apps/freally-ui/src-tauri/icons/: icon.icns
apps/sourcerer-ui/: index.html  package.json  vite.config.ts
apps/sourcerer-ui/src/: App.svelte  app.css
apps/sourcerer-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/sourcerer-ui/src-tauri/capabilities/: default.json
apps/sourcerer-ui/src-tauri/src/: lib.rs  main.rs  menu_spec.rs  native_menu.rs  url_protocol.rs
apps/sourcerer-ui/src-tauri/src/commands/: bookmarks.rs  canned.rs  extractors.rs  files.rs  index_state.rs  mod.rs  query.rs  settings.rs
apps/sourcerer-ui/src-tauri/tests/: menubar_parity.rs  menubar_wiring.rs  statusbar_parity.rs
apps/sourcerer-ui/src/components/bookmarks/: BookmarksDropdown.svelte  OrganizeBookmarksDialog.svelte
apps/sourcerer-ui/src/components/dialogs/: AboutDialog.svelte  SettingsPlaceholderDialog.svelte
apps/sourcerer-ui/src/components/filters/: QuickFiltersPalette.svelte
apps/sourcerer-ui/src/components/menu/: MenuBar.svelte
apps/sourcerer-ui/src/components/preview/: PreviewPane.svelte
apps/sourcerer-ui/src/components/results/: ColumnHeader.svelte  LensSection.svelte  ResultList.svelte  ResultRow.svelte
apps/sourcerer-ui/src/components/search-bar/: SearchBar.svelte
apps/sourcerer-ui/src/components/statusbar/: StatusBar.svelte
apps/sourcerer-ui/src/components/wizard/: FirstRunWizard.svelte
apps/sourcerer-ui/src/lib/: bootstrap.ts
apps/sourcerer-ui/src/theme/: tokens.dark.css  tokens.light.css
apps/sourcerer-ui/tests/unit/: format.test.ts  i18n.test.ts
crates/freally-index/src/: lib.rs  pipeline.rs
crates/freally-indexd/src/: history.rs  launchd.rs  service.rs  settings.rs  state.rs
crates/freally-journal-lin/examples/: phase03_smoke_driver.rs
crates/freally-journal-lin/src/: subscriber.rs
crates/freally-journal-lin/tests/: integration_journal.rs
crates/freally-journal-mac/examples/: phase02_smoke_driver.rs
crates/freally-journal-mac/tests/: integration_journal.rs
crates/freally-journal-win/examples/: phase01_smoke_driver.rs
crates/freally-journal-win/tests/: integration_journal.rs
crates/freally-similarity/src/: lib.rs
crates/sourcerer-audio/: Cargo.toml
crates/sourcerer-audio/src/: lib.rs
crates/sourcerer-cli/: Cargo.toml
crates/sourcerer-cli/src/: main.rs
crates/sourcerer-extractor-host/src/: sandbox.rs
crates/sourcerer-extractors/: Cargo.toml
crates/sourcerer-extractors/src/: lib.rs
crates/sourcerer-fsbench/: Cargo.toml
crates/sourcerer-http/: Cargo.toml
crates/sourcerer-http/src/: lib.rs
crates/sourcerer-i18n/: Cargo.toml
crates/sourcerer-i18n/src/: lib.rs
crates/sourcerer-index/: Cargo.toml
crates/sourcerer-index/src/: lib.rs
crates/sourcerer-indexd/: Cargo.toml
crates/sourcerer-indexd/src/: lib.rs  main.rs  service.rs  state.rs  volumes.rs
crates/sourcerer-journal/: Cargo.toml
crates/sourcerer-journal-lin/: Cargo.toml
crates/sourcerer-journal-lin/src/: lib.rs
crates/sourcerer-journal-mac/: Cargo.toml
crates/sourcerer-journal-mac/examples/: phase02_smoke_driver.rs
crates/sourcerer-journal-mac/src/: lib.rs  subscriber.rs
crates/sourcerer-journal-mac/tests/: integration_journal.rs
crates/sourcerer-journal-win/: Cargo.toml
crates/sourcerer-journal-win/src/: lib.rs  reasons.rs  subscriber.rs
crates/sourcerer-journal-win/tests/: integration_journal.rs
crates/sourcerer-journal/src/: lib.rs
crates/sourcerer-query/: Cargo.toml
crates/sourcerer-query/src/: ast.rs  error.rs  exec.rs  lib.rs  parser.rs  report.rs
crates/sourcerer-query/tests/: phase_10_query.rs  phase_11_ui_e2e.rs  sourcerer_dsl.rs  voidtools_compat.rs
crates/sourcerer-rpc/src/: path.rs  server.rs  service.rs
crates/sourcerer-rpc/src/transport/: windows.rs
crates/sourcerer-similarity/: Cargo.toml
crates/sourcerer-similarity/src/: lib.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  I18N_TODO.md  SECURITY.md  documentation.html  index.html
locales/ar/: sourcerer.ftl
locales/de/: sourcerer.ftl
locales/en/: sourcerer.ftl
locales/es/: sourcerer.ftl
locales/fr/: sourcerer.ftl
locales/hi/: sourcerer.ftl
locales/id/: sourcerer.ftl
locales/it/: sourcerer.ftl
locales/ja/: sourcerer.ftl
locales/ko/: sourcerer.ftl
locales/nl/: sourcerer.ftl
locales/pl/: sourcerer.ftl
locales/pt-BR/: sourcerer.ftl
locales/ru/: sourcerer.ftl
locales/tr/: sourcerer.ftl
locales/uk/: sourcerer.ftl
locales/vi/: sourcerer.ftl
locales/zh-CN/: sourcerer.ftl
tests/smoke/: phase_00_scaffold.ps1  phase_00_scaffold.rs  phase_00_scaffold.sh  phase_02_journal_mac.sh  phase_10_query.rs  phase_11_ui_e2e.ps1  phase_11_ui_e2e.rs  phase_11_ui_e2e.sh  phase_12_indexd_client.rs  phase_12_preview_hosts.rs  phase_12_rpc_transport.rs  phase_12_settings.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/cmd/: i18n_lint.rs  icon_build.rs  mod.rs  release.rs  third_party_notices.rs
(+24 files in other folders)
