[package]
name = "sourcerer-extractors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Sourcerer extractor framework (Phase 7)."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
