[package]
name = "sourcerer-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Sourcerer index core — Tantivy + custom name index (Phase 4)."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
sourcerer-journal = { path = "../sourcerer-journal" }
