[package]
name = "sourcerer-journal-lin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Linux inotify+fanotify journal subscriber for Sourcerer (Phase 3)."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
