[package]
name = "sourcerer-journal-mac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "macOS FSEvents journal subscriber for Sourcerer (Phase 2)."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
