[package]
name = "sourcerer-journal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "OS-agnostic facade and JournalEvent normalizer for Sourcerer."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[target.'cfg(windows)'.dependencies]
sourcerer-journal-win = { path = "../sourcerer-journal-win" }

[target.'cfg(target_os = "macos")'.dependencies]
sourcerer-journal-mac = { path = "../sourcerer-journal-mac" }

[target.'cfg(target_os = "linux")'.dependencies]
sourcerer-journal-lin = { path = "../sourcerer-journal-lin" }
