[package]
name = "sourcerer-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Sourcerer query DSL parser + executor (Phase 5/10)."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
