[package]
name = "sourcerer-ui"
version = "0.19.84"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-MikeWeaver-Proprietary-AllRightsReserved"
repository = "https://github.com/MikesRuthless12/Sourcerer"
authors = ["Mike Weaver <mythodikalone@gmail.com>"]
publish = false
description = "Sourcerer Tauri 2 + Svelte 5 desktop UI."

[lib]
name = "sourcerer_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "sourcerer-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
